--- a/backbone-patterns.html
+++ b/backbone-patterns.html
@@ -489,6 +489,8 @@ Ikke overengineer i begynnelsen — lær gradvis
 
 Ikke vær redd for vanlige JavaScript-objekter
 
+Pass på plugins som vil at du skal utvide fra deres namespace
+
     </textarea>
     <div id="slideshow" class="white"></div>
   </body>
